# Hercules

./: .gitignore  Atlas.ipynb  Dockerfile  Hercules.ipynb  LICENSE  Makefile  README.md  __reqs.txt  accelerate_config.yaml  babilong.ipynb  build_commands.txt  container.def  container_reqs.txt  makefile  memory_injection.ipynb  pyproject.toml  requirements.txt  useful.txt
atlas/: __init__.py  layers.py  llama_memory_layers.py  main.py  memory_as_layer.py  neural_memory.py
atlas/config/: default.yaml
atlas/logger/: __init__.py
atlas/utils/: logger.py
docs/: build_commands.txt
fake_torch/: pyproject.toml
fake_torch_package/: pyproject.toml
hercules/: __init__.py  babilong_control_experiment.py  bl_memory_pretraining.py  eduweb_memory_pretraining.py  layers.py  llama_memory_layers.py  memory_llama.py  memory_pretraining copy.py  memory_pretraining.py  neural_memory.py  neural_memory_llama.py  proc.py  utils.py
hercules/__functional__/: memory_pretraining__functional.py  neural_memory__functional.py
hercules/config/: babilong_pt.yaml  baseline.yaml  default.yaml  eduweb_pt.yaml  finetune_baseline.yaml  memory_llama.yaml  memory_llama_no_finetune.yaml  pre_training.yaml
hercules/experimental/: parallel_neural_memory.py
hercules/logger/: __init__.py  logger.py
hercules/processing/: __init__.py  babilong_proc.py  eduweb_proc.py
hercules/scraping/: README.md  nethack_parser.py  nethack_scraper.py  scraper.ipynb
hercules/scripts/: babilong_control_experiment.py  bl_memory_pretraining.py  eduweb_memory_pretraining.py  llama_baseline.py  (+2 more)
(+33 files in other folders)
