[project]
name = "hercules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "einops>=0.8.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "tensordict>=0.8.3",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
]
