[project]
name = "hercules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "bs4>=0.0.2",
    "einops>=0.8.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "tensordict>=0.8.3",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
]
