[project]
name = "hercules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.46.1",
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "datasets>=4.0.0",
    "deepspeed>=0.17.2",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "requests>=2.32.4",
    "tensordict>=0.8.3",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
]
